# PHD_Shape

./: CMakeLists.txt  README.md
app/cuda_benchmark/: benchmark.cxx
app/regression/: estimateGeodesicRegression.txx
deformetrica/: CMakeLists.txt
deformetrica/app/: CMakeLists.txt
deformetrica/app/atlas_building/: estimateAtlas.txx
deformetrica/app/deformation/: CreateDeformationField.cxx
deformetrica/src/algo/4D_atlases/: Regression.txx
deformetrica/src/algo/atlases/: Atlas.txx
deformetrica/src/algo/deformable_objects/: DeformableMultiObject.h  DeformableMultiObject.txx  Landmark.txx
deformetrica/src/algo/energy_minimization/: RegressionEstimator.txx
deformetrica/src/io/: DeformableObjectReader.txx
deformetrica/tutorial/scripts/: compute_obs_volume_script.py  copy_regression_time_points_scripts.py  create_init_baselines_script.py  create_shape_sequences_script.py  decimate_surfaces_script.py  estimate_mixed_effects_no_size_script.py  estimate_mixed_effects_script.py  group_hypothesis_testing_script.py  match_init_baselines_script.py  mcubes_script.py  rigreg_script.py  run_regression_script_age.py  transform_surfaces_script.py
deformetrica/utils/: CMakeLists.txt
deformetrica/utils/apps/: CMakeLists.txt
shape-lme/: CMakeLists.txt
shape-lme/include/: primitives.hxx
shape-lme/src/: estimate-covariate-mixed-effects.cxx  hypothesis-testing-tutorial.cxx
shape-lme/test/: estimate-covariate-mixed-effects.cxx  hypothesis-testing-tutorial.cxx  hypothesis-testing.cxx  mixed-effects-covariate-estimation.cxx
src/algo/4D_atlases/: Regression.txx
src/algo/deformable_objects/: Landmark.h
src/algo/deformations/: AdjointEquationsIntegrator.txx  Diffeos.txx
src/algo/energy_minimization/: RegressionEstimator.txx
tutorial/param_files/: left_caudate_time_param_file.txt  left_putamen_time_param_file.txt  right_caudate_time_param_file.txt  right_putamen_time_param_file.txt
tutorial/scripts/: compute_obs_volume_script.py  compute_regression_volume_script.py  copy_regression_time_points_scripts.py  create_init_baselines_script.py  create_shape_sequences_script.py  decimate_surfaces_script.py  estimate_mixed_effects_script.py  group_hypothesis_testing_script.py  match_init_baselines_script.py  mcubes_script.py  move_shapes_to_timeseries_script.py  plot_regression_volume_script.py  rigreg_script.py  run_regression_script_age.py  transform_surfaces_script.py  write_vtk_to_lpts_script.py
